test/error/E50.1.chifn
{
	"type": "function",
	"name": "hello",
	"description": 12
}
